<resources>
    <string name="app_name">ChatRoom</string>
    <string name="message">Message</string>
    <string name="phone_number">Phone number</string>
    <string name="send_message">Send message</string>
    <string name="send_message_button">Send message button</string>
    <string name="name">Name</string>
    <string name="server_address">Server address (i.e 192.168.1.10)</string>
    <string name="login">Login</string>
</resources>